--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
-# SSCASN Scraper - Streamlit App Requirements
-# Python 3.8+
-
-# Core libraries
-streamlit>=1.30.0
-requests>=2.31.0
-pandas>=2.0.0
-
-# Optional: untuk performance
-openpyxl>=3.1.0
+streamlit==1.31.0
+requests==2.31.0
+pandas==2.2.0
+openpyxl==3.1.2
